Bug 1666221 - cope with not having a working directory, r=robwu,mossop

Differential Revision: https://phabricator.services.mozilla.com/D91221