toolkit/components/commandlines/nsCommandLine.cpp
@@ -183,7 +183,42 @@ nsCommandLine::GetWorkingDirectory(nsIFile** aResult) {
 
 NS_IMETHODIMP
 nsCommandLine::ResolveFile(const nsAString& aArgument, nsIFile** aResult) {
-  NS_ENSURE_TRUE(mWorkingDir, NS_ERROR_NOT_INITIALIZED);
+  // First try to resolve as an absolute path if we can.
+  // This will work even if we have no mWorkingDir, which happens if e.g.
+  // the dir from which we were started was deleted before we started,
+#if defined(XP_UNIX)
+  if (aArgument.First() == '/') {
+    nsCOMPtr<nsIFile> lf(do_CreateInstance(NS_LOCAL_FILE_CONTRACTID));
+    NS_ENSURE_TRUE(lf, NS_ERROR_OUT_OF_MEMORY);
+    nsresult rv = lf->InitWithPath(aArgument);
+    if (NS_FAILED(rv)) {
+      return rv;
+    }
+
+    lf.forget(aResult);
+    return NS_OK;
+  }
+#elif defined(XP_WIN)
+  nsCOMPtr<nsIFile> lf(do_CreateInstance(NS_LOCAL_FILE_CONTRACTID));
+  NS_ENSURE_TRUE(lf, NS_ERROR_OUT_OF_MEMORY);
+
+  // Just try creating the file with the absolute path; if it fails,
+  // we'll keep going and try it as a relative path.
+  if (NS_SUCCEEDED(lf->InitWithPath(aArgument))) {
+    lf.forget(aResult);
+    return NS_OK;
+  }
+#endif
+  // If that fails
+  return ResolveRelativeFile(aArgument, aResult);
+}
+
+nsresult nsCommandLine::ResolveRelativeFile(const nsAString& aArgument,
+                                            nsIFile** aResult) {
+  if (!mWorkingDir) {
+    *aResult = nullptr;
+    return NS_OK;
+  }
 
   // This is some seriously screwed-up code. nsIFile.appendRelativeNativePath
   // explicitly does not accept .. or . path parts, but that is exactly what we
@@ -222,15 +257,6 @@ nsCommandLine::ResolveFile(const nsAString& aArgument, nsIFile** aResult) {
   nsCOMPtr<nsIFile> lf(do_CreateInstance(NS_LOCAL_FILE_CONTRACTID));
   NS_ENSURE_TRUE(lf, NS_ERROR_OUT_OF_MEMORY);
 
-  if (aArgument.First() == '/') {
-    // absolute path
-    rv = lf->InitWithPath(aArgument);
-    if (NS_FAILED(rv)) return rv;
-
-    NS_ADDREF(*aResult = lf);
-    return NS_OK;
-  }
-
   nsAutoCString nativeArg;
   NS_CopyUnicodeToNative(aArgument, nativeArg);
 
@@ -253,26 +279,23 @@ nsCommandLine::ResolveFile(const nsAString& aArgument, nsIFile** aResult) {
   nsCOMPtr<nsIFile> lf(do_CreateInstance(NS_LOCAL_FILE_CONTRACTID));
   NS_ENSURE_TRUE(lf, NS_ERROR_OUT_OF_MEMORY);
 
-  rv = lf->InitWithPath(aArgument);
-  if (NS_FAILED(rv)) {
-    // If it's a relative path, the Init is *going* to fail. We use string magic
-    // and win32 _fullpath. Note that paths of the form "\Relative\To\CurDrive"
-    // are going to fail, and I haven't figured out a way to work around this
-    // without the PathCombine() function, which is not available in plain
-    // win95/nt4
+  // This is a relative path. We use string magic
+  // and win32 _fullpath. Note that paths of the form "\Relative\To\CurDrive"
+  // are going to fail, and I haven't figured out a way to work around this
+  // without the PathCombine() function, which is not available before
+  // Windows 8; see https://bugzilla.mozilla.org/show_bug.cgi?id=1672814
 
-    nsAutoString fullPath;
-    mWorkingDir->GetPath(fullPath);
+  nsAutoString fullPath;
+  mWorkingDir->GetPath(fullPath);
 
-    fullPath.Append('\\');
-    fullPath.Append(aArgument);
+  fullPath.Append('\\');
+  fullPath.Append(aArgument);
 
-    WCHAR pathBuf[MAX_PATH];
-    if (!_wfullpath(pathBuf, fullPath.get(), MAX_PATH)) return NS_ERROR_FAILURE;
+  WCHAR pathBuf[MAX_PATH];
+  if (!_wfullpath(pathBuf, fullPath.get(), MAX_PATH)) return NS_ERROR_FAILURE;
 
-    rv = lf->InitWithPath(nsDependentString(pathBuf));
-    if (NS_FAILED(rv)) return rv;
-  }
+  rv = lf->InitWithPath(nsDependentString(pathBuf));
+  if (NS_FAILED(rv)) return rv;
   lf.forget(aResult);
   return NS_OK;
 
